<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimaryDark"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_rank" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="start|center_vertical"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_club" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_played" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_won" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_draw" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_lose" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_goal_balance" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:text="@string/standings_points" />

</LinearLayout>